--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="styles.css">
         <title>Document</title>
     </head>
     <body>
         <h1>Welcome to my website!</h1>
         <p>Random text.</p>
-        <button>Dark mode</button>
+        <button>Dark mode: <span>OFF</span></button>
     </body>
     <script src="script.js"></script>
 </html>
